--- a/recipes/souvlaki.html
+++ b/recipes/souvlaki.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Souvlaki</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
